--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.smarteist:autoimageslider:1.3.7'
+    implementation 'com.github.smarteist:autoimageslider:1.3.7-appcompat'
+    implementation'com.github.therealshabi:AutoImageFlipper:v1.4.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
