--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
@@ -40,7 +41,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.smarteist:autoimageslider:1.3.7'
     implementation 'com.github.smarteist:autoimageslider:1.3.7-appcompat'
-    implementation'com.github.therealshabi:AutoImageFlipper:v1.4.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.github.therealshabi:AutoImageFlipper:v1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
 }
