--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".quiz2"></activity>
+        <activity android:name=".loginOption"></activity>
+        <activity android:name=".regOption" />
+        <activity android:name=".DashboardGuru" />
+        <activity android:name=".register_guru" />
+        <activity android:name=".login_guru" />
+        <activity android:name=".quiz2" />
         <activity android:name=".setting" />
         <activity android:name=".quiz" />
         <activity android:name=".regis" />
