--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url "http://dl.bintray.com/pt-midtrans/maven" }
         
     }
     dependencies {
@@ -23,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "http://dl.bintray.com/pt-midtrans/maven" }
         maven { url 'https://jitpack.io' }
         
     }
