--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "25.3.1"
-
+    buildToolsVersion "29.0.3"
+    flavorDimensions "mode"
     defaultConfig {
         applicationId "com.example.islamdigitalecosystem"
         minSdkVersion 26
@@ -18,6 +18,15 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    productFlavors {
+        productFlavors {
+            sandbox {
+                buildConfigField "String", "BASE_URL", "\"https://ebisnis.herokuapp.com/index.php\""
+                buildConfigField "String", "CLIENT_KEY", "\"SB-Mid-client-WrRqcP3WXQsheHxf\""
+            }
+        }
+    }
+
 
     buildTypes {
         release {
@@ -57,4 +66,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    sandboxImplementation 'com.midtrans:uikit:1.21.2-SANDBOX'
+    implementation 'com.midtrans:uikit:1.21.2-SANDBOX'
 }
