--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.islamdigitalecosystem">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,13 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:allowBackup">
+        <activity android:name=".ForumHome"></activity>
         <activity android:name=".setting" />
-        <activity android:name=".loginOption"></activity>
+        <activity android:name=".loginOption" />
         <activity android:name=".regOption" />
         <activity android:name=".DashboardGuru" />
         <activity android:name=".register_guru" />
@@ -28,9 +31,11 @@
         <activity android:name=".pengetahuan" />
         <activity android:name=".uploadQuestion" />
         <activity android:name=".soalSuara" />
+        <activity android:name=".uploadMateri" />
         <activity android:name=".pilihanSoal" />
         <activity android:name=".ListSurahActivity" />
         <activity android:name=".ListVerseActivity" />
+        <activity android:name=".bab1" />
         <activity android:name=".Main" />
         <activity
             android:name=".latihan"
@@ -49,8 +54,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-
     </application>
 
 </manifest>
