--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
-    sandboxImplementation 'com.midtrans:uikit:1.21.2-SANDBOX'
-    implementation 'com.midtrans:uikit:1.21.2-SANDBOX'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 }
