add recycler view edit soal quiz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:allowBackup">
-        <activity android:name=".SelectBabQuiz"></activity>
+        <activity android:name=".BabListEditKuis"></activity>
+        <activity android:name=".EditKuis" />
+        <activity android:name=".SelectBabQuiz" />
         <activity android:name=".commentActivity" />
         <activity android:name=".forumMain" />
         <activity
