--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:allowBackup">
-        <activity android:name=".BabListEditKuis"></activity>
+        <activity android:name=".changeMedia"></activity>
+        <activity android:name=".BabListEditKuis" />
         <activity android:name=".EditKuis" />
         <activity android:name=".SelectBabQuiz" />
         <activity android:name=".commentActivity" />
