major layout update, upload materi done, view materi bugged

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <activity android:name=".DashboardGuru" />
         <activity android:name=".quiz" />
         <activity android:name=".regis" />
+        <activity android:name=".edit_materi" />
         <activity android:name=".login" />
-        <activity android:name=".materi" />
         <activity android:name=".kisah" />
         <activity android:name=".alquranfitur" />
         <activity android:name=".pengetahuan" />
@@ -40,6 +40,7 @@
         <activity android:name=".ListSurahActivity" />
         <activity android:name=".ListVerseActivity" />
         <activity android:name=".bab1" />
+        <activity android:name=".materiBab1" />
         <activity android:name=".Main" />
         <activity
             android:name=".latihan"
