--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
 }
-
