--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
