--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/launcher"
         android:label="@string/app_name"
@@ -15,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:allowBackup">
+        <activity
+            android:name=".EditProfileStudent"
+            android:exported="false" />
+        <activity
+            android:name=".EditProfileTeacher"
+            android:exported="false" />
         <activity
             android:name=".editMateriMain"
             android:exported="false" />
@@ -24,6 +31,10 @@
         <activity android:name=".SelectBabQuiz" />
         <activity android:name=".commentActivity" />
         <activity android:name=".forumMain" />
+        <activity android:name=".latihan_membaca" />
+        <activity android:name=".latihan_membaca2" />
+        <activity android:name=".membaca_jilid" />
+        <activity android:name=".membaca_jilid2" />
         <activity
             android:name=".addNewPost"
             android:parentActivityName=".forumMain" />
